# risk-weaver

./: CHANGELOG.md  LICENSE  README.md  object-detection-dsl.cabal  risk-weaver.cabal  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
bash_completion.d/: object-detection-dsl-exe  risk-weaver-exe
src/: Coco.hs  Display.hs  Draw.hs  Metric.hs  ODRiskDSL.hs
src/DSL/: BDD.hs  Core.hs
src/Format/: Coco.hs
src/RiskWeaver/: Display.hs  Draw.hs  Metric.hs  Pip.hs
src/RiskWeaver/Cmd/: BDD.hs  Core.hs
src/RiskWeaver/DSL/: BDD.hs  Core.hs
src/RiskWeaver/Format/: Coco.hs
