cabal-version:      3.0
name:               risk-weaver

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            MIT
license-file:       LICENSE
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gree.net

category:           Development
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  RiskWeaver.Format.Coco
                    , RiskWeaver.DSL.Core
                    , RiskWeaver.DSL.BDD
                    , RiskWeaver.Draw
                    , RiskWeaver.Display
                    , RiskWeaver.Metric
                    , RiskWeaver.Cmd.Core
                    , RiskWeaver.Cmd.BDD
    build-depends:    base == 4.*
                    , aeson
                    , bytestring
                    , text
                    , containers
                    , vector
                    , transformers
                    , safe-exceptions
                    , JuicyPixels
                    , inline-c
                    , sixel
                    , filepath
                    , random
                    , file-embed
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: GHC2021

executable risk-weaver-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:    base == 4.*
                    , risk-weaver
    hs-source-dirs:   app
    default-language: GHC2021

    
test-suite risk-weaver-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: base == 4.*
                 , risk-weaver
